--- a/ar/index.html
+++ b/ar/index.html
@@ -106,7 +106,7 @@
                         <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">المراجعة الداخلية</h4>
-                    <p class="text-muted">تتوجه الكثير من المنشآت إلى خصخصة المراجعة الداخلية وذلك عن طريق تكليف مكاتب أوشركات مهنية للقيام بها، لهذا سعينا منذ فترة طويلة بإستحداث قسم خاص لهذا الغرض مؤهل لتقديم خدمات المراجعة الداخلية لعملائنا والتي تركز على رفع كفاءة وفعالية الأداء ومصداقية وموثوقية التقارير المالية والتأكد من إتباع الأنظمة والقوانين التي تتبع لها المنشأة وقد قدمنا هذه الخدمة للعديد من كبار العملاء لدينا.</p>
+                    <p class="text-muted">تتوجه الكثير من المنشآت إلى خصخصة المراجعة الداخلية وذلك عن طريق تكليف مكاتب أو شركات مهنية للقيام بها، لهذا سعياً منا قمنا بإنشاء قسم خاص لهذا الغرض مؤهل لتقديم خدمات المراجعة الداخلية لعملائنا والتي تركز على رفع كفاءة وفعالية الأداء ومصداقية وموثوقية التقارير المالية والتأكد من إتباع الأنظمة والقوانين التي تتبع لها المنشأة وقد قدمنا هذه الخدمة للعديد من كبار العملاء لدينا.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -114,7 +114,7 @@
                         <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">الأنظمة المالية والإدارية</h4>
-                    <p class="text-muted">وضع وتطوير الأنظمة المالية والإدارية وذلك بناءً على دراسة منظمة لواقع نشاط العميل ومن ثم إقتراح أفضل الأنظمة الملائمة لنشاط العميل وأيضاً تقديم خدمات تطوير أنظمة الحاسب الآلي للعماء بناءً على دراسة تفصيلية لإحتياجات العميل ومن ثم تقديم أنسب الحلول الملائمة لوضع العميل ونشاطه التجاري كما نقدم خدمات تقييم الأنظمة المالية والإدارية ومعالجة أي قصور فيها.</p>
+                    <p class="text-muted">وضع وتطوير الأنظمة المالية والإدارية وذلك بناءً على دراسة منظمة لواقع نشاط العميل ومن ثم اقتراح أفضل الأنظمة الملائمة لنشاط العميل وأيضاً تقديم خدمات تطوير أنظمة الحاسب الآلي للعملاء بناءً على دراسة تفصيلية لاحتياجات العميل ومن ثم تقديم أنسب الحلول الملائمة لوضع العميل ونشاطه التجاري كما نقدم خدمات تقييم الأنظمة المالية والإدارية ومعالجة أي قصور فيها.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -141,7 +141,7 @@
                         <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">إعداد وتطوير الهياكل التنظيمية</h4>
-                    <p class="text-muted">نقوم بإعداد الأنظمة المالية والإدارية طبقاً للهيكل التنظيمي للمنشاة مع تحديد الدورات المالية مثل (دورة المشتريات والدائنون ودورة المبيعات والمدينون) والدورات الإدارية للنظام بالإضافة إلى عمل توصيف كامل للوظائف وتحديد اللوائح التي تخضع لها والصلاحيات لكل مستوى إداري في ظل نظام رقابي متكامل.</p>
+                    <p class="text-muted">نقوم بإعداد الأنظمة المالية والإدارية طبقاً للهيكل التنظيمي للمنشأة مع تحديد الدورات المالية مثل (دورة المشتريات والدائنون ودورة المبيعات والمدينون) والدورات الإدارية للنظام بالإضافة إلى عمل توصيف كامل للوظائف وتحديد اللوائح التي تخضع لها والصلاحيات لكل مستوى إداري في ظل نظام رقابي متكامل.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -149,7 +149,7 @@
                         <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">وضع الخطط الإستراتيجية وتقييم الأداء</h4>
-                    <p class="text-muted">يتم إعداد الخطط الإستراتيجية طويلة المدى وقصيرة المدى التي تناسب المنشآت وتتماشى مع طبيعة نشاطها وتحقق لها الأهداف المطلوبة والمحددة سلفاً من قبل مجالس إدارتها كما يتم تقييم هذه الخطط خلال مراحل التنفيذ وتحديد أسباب الانحرافات والعمل على معالجتها كما يتم تقييم أداء العاملين وإيضاح طرق رفع كفاءتهم الإنتاجية.</p>
+                    <p class="text-muted">يتم إعداد الخطط الإستراتيجية طويلة المدى وقصيرة المدى التي تناسب المنشآت وتتماشى مع طبيعة نشاطها وتحقق لها الأهداف المطلوبة والمحددة سلفاً من قبل مجالس إداراتها كما يتم تقييم هذه الخطط خلال مراحل التنفيذ وتحديد أسباب الانحرافات والعمل على معالجتها كما يتم تقييم أداء العاملين وإيضاح طرق رفع كفاءتهم الإنتاجية.</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -175,7 +175,7 @@
                         <i class="fa fa-percent fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">الضريبة المضافة</h4>
-                    <p class="text-muted">وهي الضريبة التي تفرض على المبيعات أو الإستهلاك النهائي للسلعة وهي تضاف على سوق السلعة. وسيتم طرحها في المملكة العربية السعودية إبتداءً من 1 يناير 2018 وإن فريق عملنا بدأ للتجهيز لهذا العمل ليخدم عملائه على أحسن وجه مستفيداً من خبرة موظفينا وشراكتنا العالمية ومعرفتهم بهذا النوع من الضرائب وخاصة بالدول الشقيقة وإن مكتبنا جاهز لتقديم هذا النوع من الخدمات عندما يتم إقرارها وتطبيقها.</p>
+                    <p class="text-muted">وهي الضريبة التي تفرض على المبيعات أو الإستهلاك النهائي للسلعة وهي تضاف على سوق السلعة، وسيتم طرحها في المملكة العربية السعودية إبتداءً من 1 يناير 2018 وإن فريق عملنا بدأ للتجهيز لهذا العمل ليخدم عملائه على أحسن وجه مستفيداً من خبرة موظفينا وشراكتنا العالمية ومعرفتهم بهذا النوع من الضرائب وخاصة بالدول الشقيقة وإن مكتبنا جاهز لتقديم هذا النوع من الخدمات عندما يتم إقرارها وتطبيقها.</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -185,7 +185,7 @@
                         <i class="fa fa-exclamation-triangle fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">إدارة وتقييم المخاطر</h4>
-                    <p class="text-muted">  قياس وتقييم وتحديد المخاطر التي تواجهها الشركة ووضع الحلول الوقائية والخطط الإستراتيجية لمواجهة وإدارة هذه المخاطر وتجنبها وتقليل آثارها السلبية بقدر الإمكان.</p>
+                    <p class="text-muted">  قياس وتقييم وتحديد المخاطر التي تواجهها المنشآت ووضع الحلول الوقائية والخطط الإستراتيجية لمواجهة وإدارة هذه المخاطر وتجنبها وتقليل آثارها السلبية بقدر الإمكان.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -271,7 +271,7 @@
                     <div class="col-sm-4">
                             <div class="team-member">
                                 <img src="img/team/4.jpg" class="img-responsive img-circle" alt="">
-                                <h4>محمود احمد علي</h4>
+                                <h4>محمود أحمد علي</h4>
                                 <p class="text-muted">مدير مراجعة
                                     <br>
                                     <br> السيرة الذاتية
@@ -290,7 +290,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">عن الشركة</h2>
+                    <h2 class="section-heading">عن المكتب</h2>
                     <h3 class="section-subheading text-muted">التعريف، الرؤية، الأهداف</h3>
                 </div>
             </div>
@@ -306,7 +306,7 @@
                                     <h4>نبذة تاريخية</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">تأسس مكتب عبدالله باكودح للاستشارات المالية في مدينة الدمام بالمملكة العربية السعودية عام 2002م وحصل على سجل تجاري رقم 040961 واتبع سياسات متميزة لخدمة عملائه وامتاز بتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
+                                    <p class="text-muted">تأسس مكتب عبدالله باكودح للاستشارات المالية في مدينة الدمام بالمملكة العربية السعودية عام 2002م وحصل على سجل تجاري رقم 2050040961 واتبع سياسات متميزة لخدمة عملائه وامتاز بتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
                                 </div>
                             </div>
                         </li>
@@ -332,7 +332,7 @@
                                     <h4>رسالتنا</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">تقديم خدمات الإستشارات المالية والحلول المالية بإتباع أرفع المعايير الأخلاقية في العمل المهني بواسطة فريق عمل يتميز بالثقة والنزاهة ومتواجداً عندما يريدنا شركاؤنا فالصديق وقت الضيق.</p>
+                                    <p class="text-muted">تقديم خدمات الاستشارات المالية والحلول المالية بإتباع أرفع المعايير الأخلاقية في العمل المهني بواسطة فريق عمل يتميز بالثقة والنزاهة ومتواجد عندما يريدونا شركاؤنا فالصديق وقت الضيق.</p>
                                 </div>
                             </div>
                         </li>
@@ -361,10 +361,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>المكاتب المحلية</h4>
+                                    <h4>مكاتبنا</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted" >تقع مكاتب الشركة في كل من مدينة الدمام ومدينة جدة ويقوم على إدارة هذه المكاتب خبراء مهنيون على مستوى عالٍ جداً من الخبرة العلمية والعملية ويتمتعون بمستوى عالٍ من الكفاءة والأمانة والنزاهة والدقة في العمل بدعم عدد كبير من الخبراء الأوروبيين وعلى الأخص السويسريين من العضو العالمي مجموعة جنيف للإستشارات.</p>
+                                    <p class="text-muted" >تقع مكاتبنا في كل من مدينة الدمام ومدينة جدة ويقوم على إدارة هذه المكاتب خبراء مهنيون على مستوى عالٍ جداً من الخبرة العلمية والعملية ويتمتعون بمستوى عالٍ من الكفاءة والأمانة والنزاهة والدقة في العمل بدعم عدد كبير من الخبراء الأوروبيين وعلى الأخص السويسريين من العضو العالمي مجموعة جنيف للإستشارات.</p>
                                 </div>
                             </div>
                         </li>
@@ -475,7 +475,7 @@
                             جدة</h4>
                         <p style="color:#fff">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i> طريق المدينة النازل، بعد شارع قريش <br/>
-                                حي السلامة، قصر الأعمال <br/>
+                                حي السلامة، بناية قصر الأعمال <br/>
                             <i class="fa fa-inbox" aria-hidden="true"></i> ص. ب 48541 جدة 21582 <br/>
                             <i class="fa fa-phone" aria-hidden="true"></i> هاتف 012/6397727 <br/>
                             <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:abdullah@bakodah.com.sa" class="link" style="color:#fff"> abdullah@bakodah.com.sa</a></div>
@@ -634,7 +634,7 @@
                             <div class="col-lg-8 col-lg-offset-2">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here -->
-                                    <h2 class="section-heading">محمود احمد علي</h2>
+                                    <h2 class="section-heading">محمود أحمد علي</h2>
                                     <p class="section-subheading">مدير مراجعة</p>
                                     <p style="text-align:right"><strong>الجنسية:</strong>
                                     <br>مصري
