--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                     <h4>Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Dammam, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 040961). The bureau follows exceptional policies in serving its clients and offers diverse professional services provided by long and widely experienced professionals.</p>
+                                    <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Dammam, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 2050040961). The bureau follows exceptional policies in serving its clients and offers diverse professional services provided by long and widely experienced professionals.</p>
                                 </div>
                             </div>
                         </li>
@@ -369,7 +369,7 @@
                                     <h4>Local Offices</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The bureau’s offices are located in Jeddah and Dammam, and the management of these offices is based on experts at a high level of academic and practical experience. These employees are being supported by a large number of European, especially Swiss, experts backed by our international partner Geneva Consulting Group</p>
+                                    <p class="text-muted">Our offices are located in Jeddah and Dammam, and the management of these offices is based on experts at a high level of academic and practical experience. These employees are being supported by a large number of European, especially Swiss, experts backed by our international partner Geneva Consulting Group</p>
                                 </div>
                             </div>
                         </li>
