make #about 1st

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#about">About Us <i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#services">Services <i class="fa fa-star" aria-hidden="true"></i></a>
                     </li>
                     <li>
                             <a class="page-scroll" href="#team">Team <i class="fa fa-users aria-hidden="true""></i></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About Us <i class="fa fa-info-circle" aria-hidden="true"></i></a>
                     </li>
                     <li>
                             <a class="page-scroll" href="#GCG">International <i class="fa fa-globe" aria-hidden="true"></i></a>
@@ -83,11 +83,105 @@
             <div class="intro-text">
                     <div class="intro-heading">Abdullah Bakodah Financial Advisory</div>
                     <div class="intro-lead-in"><h4>Independent member of Geneva Consulting Group</h4></div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
-
+<!-- About Section -->
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Who Are We?</h2>
+                <h3 class="section-subheading text-muted">Profile, Mission, and Objectives</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Our Humble Beginnings</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Dammam, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 2050040961). The bureau follows exceptional policies in serving its clients and offers diverse professional services provided by long and widely experienced professionals.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Vision</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Our vision is to be partners with our clients in the Kingdom of Saudi Arabia and the Gulf region by providing services with high efficiency and integrity. These services include all kinds of financial advisory services and any other professional services required by our clients by providing these services in an effective manner, with high quality and accuracy beyond clients’ expectations.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Mission</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Our mission is to provide financial advisory services, consultation and financial solutions to follow the highest professional and ethical standards in a professional manner by a working group which is characterized by trust, integrity and presence at any time requested by the client.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Goals</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted" >1. Identify and analyze strength and weaknesses and the opportunities for potential risks. In addition, we provide the financial management of the company with our observations on any matters.
+                                    <br>2. To help our clients achieve their goals and overcome any difficulties they may face.
+                                    <br>3. Maintaining a high efficiency, accuracy and integrity of our team through training courses and workshops.
+                                    <br>4. Adopt a policy by which clients are our partners in success, their success is our success.
+                                    <br>5. Continuous development of our work performance to provide continuous advisory to our clients to improve their development too.                                        
+                                    <br>6. Communicate with professional associations and worldwide organizations to stay up-to-date with the changes in our professional field. 
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Local Offices</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Our offices are located in Jeddah and Dammam, and the management of these offices is based on experts at a high level of academic and practical experience. These employees are being supported by a large number of European, especially Swiss, experts backed by our international partner Geneva Consulting Group</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <h4>Be Part
+                                <br>Of Our
+                                <br>Story!</h4>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
     <!-- Services Section -->
     <section id="services">
             <div class="container">
@@ -290,101 +384,7 @@
             </div>
         </div>
     </section> 
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Who Are We?</h2>
-                    <h3 class="section-subheading text-muted">Profile, Mission, and Objectives</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Dammam, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 2050040961). The bureau follows exceptional policies in serving its clients and offers diverse professional services provided by long and widely experienced professionals.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Vision</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Our vision is to be partners with our clients in the Kingdom of Saudi Arabia and the Gulf region by providing services with high efficiency and integrity. These services include all kinds of financial advisory services and any other professional services required by our clients by providing these services in an effective manner, with high quality and accuracy beyond clients’ expectations.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Mission</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Our mission is to provide financial advisory services, consultation and financial solutions to follow the highest professional and ethical standards in a professional manner by a working group which is characterized by trust, integrity and presence at any time requested by the client.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Goals</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted" >1. Identify and analyze strength and weaknesses and the opportunities for potential risks. In addition, we provide the financial management of the company with our observations on any matters.
-                                        <br>2. To help our clients achieve their goals and overcome any difficulties they may face.
-                                        <br>3. Maintaining a high efficiency, accuracy and integrity of our team through training courses and workshops.
-                                        <br>4. Adopt a policy by which clients are our partners in success, their success is our success.
-                                        <br>5. Continuous development of our work performance to provide continuous advisory to our clients to improve their development too.                                        
-                                        <br>6. Communicate with professional associations and worldwide organizations to stay up-to-date with the changes in our professional field. 
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Local Offices</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Our offices are located in Jeddah and Dammam, and the management of these offices is based on experts at a high level of academic and practical experience. These employees are being supported by a large number of European, especially Swiss, experts backed by our international partner Geneva Consulting Group</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <!-- GCG Section -->
     <section id="GCG">
             <div class="container">
