--- a/ar/index.html
+++ b/ar/index.html
@@ -54,14 +54,14 @@
                         <a href="#page-top"></a>
                     </li>
                     <li style="float:right">
+                            <a class="page-scroll" href="#about">عن المكتب <i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                    </li>
+                    <li style="float:right">
                         <a class="page-scroll" href="#services">الخدمات <i class="fa fa-star" aria-hidden="true"></i></a>
                     </li>
                     <li style="float:right">
                             <a class="page-scroll" href="#team">فريق العمل <i class="fa fa-users aria-hidden="true""></i></a>
                         </li>
-                    <li style="float:right">
-                            <a class="page-scroll" href="#about">عن الشركة <i class="fa fa-info-circle" aria-hidden="true"></i></a>
-                    </li>
                     <li style="float:right">
                             <a class="page-scroll" href="#GCG">العضوية العالمية <i class="fa fa-globe" aria-hidden="true"></i></a>
                     </li>
@@ -84,12 +84,106 @@
             <div class="intro-text">
                 <div class="intro-heading">مكتب عبدالله باكودح للإستشارات المالية</div>
                 <div class="intro-lead-in"><h4>عضو مستقل في مجموعة جنيف للإستشارات المالية</h4></div>
-                <a href="#services" class="page-scroll btn btn-xl">اعرف المزيد</a>
+                <a href="#about" class="page-scroll btn btn-xl">اعرف المزيد</a>
             </div>
             
         </div>
     </header>
-
+<!-- About Section -->
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">عن المكتب</h2>
+                <h3 class="section-subheading text-muted">التعريف، الرؤية، الأهداف</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="timeline">
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>نبذة تاريخية</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">تأسس مكتب عبدالله باكودح للاستشارات المالية في مدينة الدمام بالمملكة العربية السعودية عام 2002م وحصل على سجل تجاري رقم 2050040961 واتبع سياسات متميزة لخدمة عملائه وامتاز بتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li >
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 >رؤيتنا</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">أن نكون شركاء مع عملائنا في المملكة العربية السعودية ودول الخليج والشرق الأوسط وأن نقدم لهم الإضافة ونزودهم بخدمات الإستشارات المالية المتنوعة وأي خدمات مالية ومهنية أخرى قد يحتاجون لها بمستويات تفوق توقعاتهم.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>رسالتنا</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">تقديم خدمات الاستشارات المالية والحلول المالية بإتباع أرفع المعايير الأخلاقية في العمل المهني بواسطة فريق عمل يتميز بالثقة والنزاهة ومتواجد عندما يريدونا شركاؤنا فالصديق وقت الضيق.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li >
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>أهدافنا</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted" >1. تحديد نقاط القوة والضعف وفرص المخاطر المحتملة وتقديم الحلول المالية التي تضيف قيمة لعملائنا.
+                                    <br>2. مساعدة عملائنا على تحقيق أهدافهم وتجاوز أي صعوبات قد تواجههم.
+                                    <br>3. المحافظة على ارتفاع كفاءة فريق العمل والذي يتمتع بالدقة والنزاهة عن طريق الدورات التدريبية وورش العمل.
+                                    <br>4. اعتماد سياسة أن العملاء شركاء لنا في النجاح، نجاحهم من نجاحنا.
+                                    <br>5. التطوير المستمر في طريقة أداء عملنا والعمل على تقديم النصائح المستمرة لعملائنا لتطوير أداء عملهم أيضاً.
+                                    <br>6. التواصل مع الجمعيات المهنية والهيئات العالمية في مجال عملنا المهني حتى نواكب أحدث متغيرات العصر.
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>مكاتبنا</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted" >تقع مكاتبنا في كل من مدينة الدمام ومدينة جدة ويقوم على إدارة هذه المكاتب خبراء مهنيون على مستوى عالٍ جداً من الخبرة العلمية والعملية ويتمتعون بمستوى عالٍ من الكفاءة والأمانة والنزاهة والدقة في العمل بدعم عدد كبير من الخبراء الأوروبيين وعلى الأخص السويسريين من العضو العالمي مجموعة جنيف للإستشارات.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <h4>إنضم لنا
+                                <br>وكن جزءاً
+                                <br>من مستقبلنا</h4>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
     <!-- Services Section -->
     <section id="services">
         <div class="container">
@@ -285,101 +379,7 @@
                 </div>
             </div>
         </section>
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">عن المكتب</h2>
-                    <h3 class="section-subheading text-muted">التعريف، الرؤية، الأهداف</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>نبذة تاريخية</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">تأسس مكتب عبدالله باكودح للاستشارات المالية في مدينة الدمام بالمملكة العربية السعودية عام 2002م وحصل على سجل تجاري رقم 2050040961 واتبع سياسات متميزة لخدمة عملائه وامتاز بتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li >
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 >رؤيتنا</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">أن نكون شركاء مع عملائنا في المملكة العربية السعودية ودول الخليج والشرق الأوسط وأن نقدم لهم الإضافة ونزودهم بخدمات الإستشارات المالية المتنوعة وأي خدمات مالية ومهنية أخرى قد يحتاجون لها بمستويات تفوق توقعاتهم.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>رسالتنا</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">تقديم خدمات الاستشارات المالية والحلول المالية بإتباع أرفع المعايير الأخلاقية في العمل المهني بواسطة فريق عمل يتميز بالثقة والنزاهة ومتواجد عندما يريدونا شركاؤنا فالصديق وقت الضيق.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li >
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>أهدافنا</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted" >1. تحديد نقاط القوة والضعف وفرص المخاطر المحتملة وتقديم الحلول المالية التي تضيف قيمة لعملائنا.
-                                        <br>2. مساعدة عملائنا على تحقيق أهدافهم وتجاوز أي صعوبات قد تواجههم.
-                                        <br>3. المحافظة على ارتفاع كفاءة فريق العمل والذي يتمتع بالدقة والنزاهة عن طريق الدورات التدريبية وورش العمل.
-                                        <br>4. اعتماد سياسة أن العملاء شركاء لنا في النجاح، نجاحهم من نجاحنا.
-                                        <br>5. التطوير المستمر في طريقة أداء عملنا والعمل على تقديم النصائح المستمرة لعملائنا لتطوير أداء عملهم أيضاً.
-                                        <br>6. التواصل مع الجمعيات المهنية والهيئات العالمية في مجال عملنا المهني حتى نواكب أحدث متغيرات العصر.
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>مكاتبنا</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted" >تقع مكاتبنا في كل من مدينة الدمام ومدينة جدة ويقوم على إدارة هذه المكاتب خبراء مهنيون على مستوى عالٍ جداً من الخبرة العلمية والعملية ويتمتعون بمستوى عالٍ من الكفاءة والأمانة والنزاهة والدقة في العمل بدعم عدد كبير من الخبراء الأوروبيين وعلى الأخص السويسريين من العضو العالمي مجموعة جنيف للإستشارات.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>إنضم لنا
-                                    <br>وكن جزءاً
-                                    <br>من مستقبلنا</h4>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <!-- GCG Section -->
     <section id="GCG">
         <div class="container">
