--- a/index.html
+++ b/index.html
@@ -428,7 +428,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form action="https://formspree.io/baker@alhadrami.xyz" method="POST" name="sentMessage" id="contactForm" novalidate>
+                    <!-- put this inside form action="https://formspree.io/baker@alhadrami.xyz" method="POST" -->
+                    <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -436,7 +437,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="_replyto" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" name="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
@@ -456,9 +457,9 @@
                                 <button type="submit" value="Send" class="btn btn-xl">Send <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                             </div>
                         </div>
-                        <input type="hidden" name="_subject" value="From bakodah.com.sa: new message!">
+                       <!--  <input type="hidden" name="_subject" value="From bakodah.com.sa: new message!">
                         <input type="text" name="_gotcha" style="display:none" />
-                        <input type="hidden" name="_format" value="plain" />
+                        <input type="hidden" name="_format" value="plain" />!-->
                     </form>
                 </div>
             </div>
@@ -678,7 +679,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <!-- <script src="js/jqBootstrapValidation.js"></script> -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
