ajax format plain

--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
                                 <button type="submit" value="Send" class="btn btn-xl">Send <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                             </div>
                         </div>
-                       <!--  <input type="hidden" name="_subject" value="From bakodah.com.sa: new message!">
+                        <input type="hidden" name="_subject" value="لديك رسالة جديدة من موقع مكتب الإستشارات">
                         <input type="text" name="_gotcha" style="display:none" />
-                        <input type="hidden" name="_format" value="plain" />!-->
+                        <input type="hidden" name="_format" value="plain" />
                     </form>
                 </div>
             </div>
