--- a/ar/index.html
+++ b/ar/index.html
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">عن المكتب</h2>
-                <h3 class="section-subheading text-muted">التعريف، الرؤية، الأهداف</h3>
+                <h3 class="section-subheading text-muted"></h3>
             </div>
         </div>
         <div class="row">
@@ -393,9 +393,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                         <h4 class="service-heading" >مجموعة جنيف الإستشارية</h4>
-                        <p class="text-muted">مكتب عبدالله باكودح للإستشارات المالية عضو مستقل في مجموعة جنيف للإستشارات
-                            <br>وهي أحد أكبر بيوت الخبرة السويسرية في الإستشارات ويتم عمل إجتماع سنوي بحضور
-                            <br>جميع الأعضاء في هذه المجموعة ويعقد في أحد المدن الأوروبية
+                        <p class="text-muted" style="text-align: center">مكتب عبدالله باكودح للإستشارات المالية عضو مستقل في مجموعة جنيف للإستشارات
+                            <br>وهي أحد أكبر بيوت الخبرة السويسرية في الإستشارات ويتم عمل إجتماع سنوي 
+                            <br>بحضور جميع الأعضاء في هذه المجموعة ويعقد في أحد المدن الأوروبية
                             <br>
                             <br>
                             <br></p>
