--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Who Are We?</h2>
-                <h3 class="section-subheading text-muted">Profile, Mission, and Objectives</h3>
+                <h3 class="section-subheading text-muted"></h3>
             </div>
         </div>
         <div class="row">
@@ -398,13 +398,13 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                             <h4 class="service-heading">Geneva Consulting Group</h4>
-                            <p class="text-muted">Our firm is an independent member of Geneva Consulting Group (GCG), the premier global network of Management Consulting firms. 
-                            <br>Headquartered in Switzerland, GCG was launched with the aim of connecting worldwide the leading advisory firms in a secure environment. GCG manages 
-                            <br>management consulting activities on behalf of clients. We advise and assist our clients through a range of demanding situations, including strategy, 
-                            <br>organisation & HR, technology, turnaround & transformation. GCG helps those professional firms who work within continuously growing, converting 
-                            <br>itself into the leading and most complete international network of Management Consulting firms. GCG is not focused solely in the United States or 
-                            <br>Europe and has equally strong operations in Latin America, Africa and Asia. Our sector and industry know-how and worldwide connections make us
-                            <br>ideally positioned to advise clients on how to complete their transaction successfully, whatever the economic situation is.
+                            <p class="text-muted" >Our firm is an independent member of Geneva Consulting Group (GCG), the premier global network of Management Consulting firms. 
+                            Headquartered in Switzerland, GCG was launched with the aim of connecting worldwide the leading advisory firms in a secure environment. GCG manages 
+                            management consulting activities on behalf of clients. We advise and assist our clients through a range of demanding situations, including strategy, 
+                            organisation & HR, technology, turnaround & transformation. GCG helps those professional firms who work within continuously growing, converting 
+                            itself into the leading and most complete international network of Management Consulting firms. GCG is not focused solely in the United States or 
+                            Europe and has equally strong operations in Latin America, Africa and Asia. Our sector and industry know-how and worldwide connections make us
+                            ideally positioned to advise clients on how to complete their transaction successfully, whatever the economic situation is.
                             <br>
                             <br>
                             <br></p>
@@ -457,9 +457,9 @@
                                 <button type="submit" value="Send" class="btn btn-xl">Send <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                             </div>
                         </div>
-                        <input type="hidden" name="_subject" value="لديك رسالة جديدة من موقع مكتب الإستشارات">
+                        <!--<input type="hidden" name="_subject" value="لديك رسالة جديدة من موقع مكتب الإستشارات">
                         <input type="text" name="_gotcha" style="display:none" />
-                        <input type="hidden" name="_format" value="plain" />
+                        <input type="hidden" name="_format" value="plain" />!-->
                     </form>
                 </div>
             </div>
