--- a/ar/index.html
+++ b/ar/index.html
@@ -419,7 +419,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form action="https://formspree.io/baker@alhadrami.xyz" method="POST" name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6" style="float:right">
                                 <div class="form-group">
@@ -427,7 +427,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="_replyto" class="form-control" placeholder="بريدك الإلكتروني *" id="email" required data-validation-required-message="فضلاً ضع عنوان بريدك الإلكتروني">
+                                    <input type="email" name="email" class="form-control" placeholder="بريدك الإلكتروني *" id="email" required data-validation-required-message="فضلاً ضع عنوان بريدك الإلكتروني">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
@@ -437,7 +437,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="أُكتب رسالتك هنا *" id="message" required data-validation-required-message="فضلاً أكتب رسالتك بالمكان المخصص"></textarea>
+                                    <textarea class="form-control" name="message" placeholder="أُكتب رسالتك هنا *" id="message" required data-validation-required-message="فضلاً أكتب رسالتك بالمكان المخصص"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
