--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <textarea class="form-control" name="message" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger" name=""></p>
+                                    <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
