--- a/ar/index.html
+++ b/ar/index.html
@@ -448,8 +448,8 @@
                             </div>
                         </div>
                         <!--<input type="hidden" name="_subject" value="From bakodah.com.sa: new message!">
-                        <input type="text" name="_gotcha" style="display:none" />
-                        <input type="hidden" name="_format" value="plain" />!-->
+                        <input type="text" name="_gotcha" style="display:none" />!-->
+                        <input type="hidden" name="_format" value="plain" />
                     </form>
                 </div>
             </div>
